<resources>
    <string name="app_name">BaseApp</string>
    <string name="pull_down_refresh">Slide down to refresh</string>
    <string name="release_refresh">Release the refresh immediately</string>
    <string-array name="cash_tabs">
        <item>Income record</item>
        <item>Expenditure record</item>
    </string-array>
    <string name="refreshing">Refresh</string>
    <string name="str_sign_in">Login</string>
    <string name="str_register">Register</string>
    <string name="str_rd_home">Home</string>
    <string name="str_rd_order">USDT</string>
    <string name="str_rd_task">Status</string>
    <string name="str_rd_member">Upload</string>
    <string name="str_rd_mine">Mine</string>
    <string name="str_touxiao">Avatar</string>
    <string name="str_me_phone">Phone number</string>
    <string name="str_bank_info">Payment information</string>
    <string name="str_usdt">USDT</string>
    <string name="str_zhifupas">Withdrawals password</string>
    <string name="str_accout_blance">Account Balance</string>
    <string name="str_accout_blance_ex">Account Balance:</string>
    <string name="str_now_zhifu">Immediate payment</string>
    <string name="str_tixian">Withdraw money</string>
    <string name="str_chongzhi">Recharge</string>
    <string name="str_chongzhi_vip">Purchase upgrade</string>
    <string name="str_tixianjl">Withdrawal record</string>
    <string name="str_shouzhijl">Income and expenditure records</string>
    <string name="str_about_us">About Us</string>
    <string name="str_me_infos">Personal information</string>
    <string name="str_day_task_sum">Daily task：</string>
    <string name="str_invitcode_">Invitation code:</string>
    <string name="str_accout_blance_">Account Balance</string>
    <string name="str_now_dj">Current level</string>
    <string name="str_now_shenj">Upgrade</string>
    <string name="str_task_sumn_">Number of tasks</string>
    <string name="str_vip_info_">After upgrading \nyou can get more tasks</string>
    <string name="str_day_task_sum_1">Daily task num：</string>
    <string name="str_task_yonj">Single task bonus：</string>
    <string name="str_day_shouyi">Daily income：</string>
    <string name="str_baozhengjin">Cash pledge:</string>
    <string name="str_task_shili">View task examples</string>
    <string name="str_look_task_sl">Submit</string>
    <string name="str_start_task">Start task</string>
    <string name="str_start_task_1">Do it</string>
    <string name="str_no_data">Empty data</string>
    <string name="str_receive_order">Auto Process</string>
    <string name="str_copy_success">Copy Success</string>
    <string name="str_input_error">input error</string>
    <string name="str_tixian_pass">Withdrawals password</string>
    <string name="str_yuebuzu">Insufficient balance</string>
    <string name="str_pass_inut_tis">Passwords are inconsistent, please re-enter</string>
    <string name="str_save_1">Confirm</string>
    <string name="str_rd_team">Brokerage</string>
    <string name="str_mine_title_03">  Record  </string>
    <string name="str_bank_name">Bank Name</string>
    <string name="str_bank_name_1">Please click to select a bank</string>
    <string name="str_hime_login_1">Enter your phone number</string>
    <string name="str_him_login_2">Enter password</string>
    <string name="str_him_login_3">Invitation code(Optional)</string>
    <string name="str_him_login_4">SMS verification code</string>
    <string name="str_commt_task_pic">Screenshot of completed task</string>
    <string name="str_tos_login_2">invalid phone number</string>
    <string name="str_sure_commit">Confirm submission</string>
    <string name="str_dia_newuser1">Your level: </string>
    <string name="str_dia_newuser2">Congratulations on becoming VIP0! \n\nGot</string>
    <string name="str_dia_newuser3">\n\nGo to complete the tasks and get more cash rewards!</string>
    <string name="str_dia_newuser4">let\'s start</string>
    <string name="str_extr_0">Pending</string>
    <string name="str_extr_1">Success</string>
    <string name="str_extr_2">Failure</string>
    <string name="str_extr_4">Your withdrawal application has been received, and the finance is under review. The review time is within 24 hours to 48 hours. You can receive your withdrawal as soon as possible on the same day. If you do not receive it on the same day, please do not rush it.\n\nPlease be patient, this is often because there are too many people who initiate withdrawals, it takes time to process, or the payment channel is congested.\n\nIf the withdrawal fails, please contact customer service for consultation.</string>
    <string name="str_extr_5">Congratulations, your withdrawal has arrived!\n\nYou can share it with your friends. Please share a screenshot of your successful withdrawal in the NoiseMedia telegram group\n\nInvite more people to join NoiseMedia and have a chance to get rich rewards.</string>
    <string name="str_extr_6">The mobile phone number is inconsistent with the bank card binding, please fill in the correct bank card account number and bound mobile phone number.\n\nThe amount has been refunded to your platform account balance, you can view the refund record in the income and expenditure records.</string>
    <string name="str_extr_7">The bank account is not supported. Please change to a new bank account. Then reapply for withdrawal.\n\nThe amount will be refunded to your plaThe amount has been refunded to your platform account balance, you can view the refund record in the income and expenditure records.</string>
    <string name="str_extr_7_1">You do not meet the withdrawal rules, please check the detailed withdrawal rules. If the rules are met, the withdrawal is successful.\n\nThe amount has been refunded to your platform account balance, you can view the refund record in the income and expenditure records.</string>
    <string name="str_extr_8">Income and expenditure records</string>
    <string name="str_extr_9">ok</string>
    <string name="str_upgrade_1">Upgrade failed</string>
    <string name="str_upgrade_2">Your account balance is insufficient, please recharge.</string>
    <string name="str_upgrade_3">Recharge now</string>
    <string name="str_vip_upgrade_1">Balance upgrade</string>
    <string name="str_vip_upgrade_2">VIP %1$s upgrade fee is Rs %2$s (Which will be debited directly from account balance)\nAt the same time, cash pledge is Cash pledge: %3$s SAR (In order to receive tasks, your balance needs to remain above %4$s SAR as a cash pledge)\n\nTherefore, before upgrading, please make sure that your balance is sufficient. After the upgrade is successful, you cannot downgrade.\n\nWhat does the Cash pledge mean?\nIf you upgrade to VIP1 or higher, it means that you have decided to cooperate with NoiseMedia, and you must deposit enough margin in the balance to maintain the cooperation with NoiseMedia.\nTherefore, the required balance is stored in your account as balance Balance Required. After you pay enough deposit according to the current VIP Balance Required, the member can immediately perform tasks according to their VIP level. Members can withdraw all balances at any time (including all the income you earn and the deposit you deposit).\nSome members have been upgraded to VIP by mistake and do not intend to deposit a full balance as a deposit. It is recommended that members invite more friends to earn referral bonuses until you earn enough income as a deposit. We would like to remind all members not to upgrade that if you are not prepared to deposit your money into the balance as a deposit, the membership fee will not be returned to your balance because the VIP level cannot be downgraded to a lower level.</string>
    <string name="str_vip_upgrade_4"> \n\nwhich will be deducted from your balance.\n\n Please make sure your account balance is sufficient.</string>
    <string name="str_vip_upgrade_3">Confirm upgrade</string>
    <string name="str_extr_success_1">Successful application</string>
    <string name="str_extr_success_2">Will be approved within 1 working day! \n\nYou can check the withdrawal status in the withdrawal record.</string>
    <string name="str_extr_success_3">Withdrawal record</string>
    <string name="str_login_sencsu">Send Success</string>
    <string name="str_order_ts_1">Prompt</string>
    <string name="str_order_ts_2">Does not match your current level.\n\nPlease go to the current level to receive the task</string>
    <string name="str_order_ts_3">Current level</string>
    <string name="str_new_u_order_ts_1">prompt</string>
    <string name="str_extra_ac_413">Enter the withdrawal amount</string>
    <string name="str_extra_ac_5">Withdrawal rules:</string>
    <string name="str_extra_ac_7_1">1. Minimum withdrawal: 200</string>
    <string name="str_extra_ac_8">2. The withdrawal time is from Monday to Sunday from 10 am to 10 pm.</string>
    <string name="str_extra_ac_9">3. After you submit the withdrawal application, your funds will arrive in your account within 24 hours. If you have not received the payment within the time limit, please contact customer service for assistance in time.</string>
    <string name="str_extra_ac_11">Amount:</string>
    <string name="str_team_commission1">Team task income:</string>
    <string name="str_team_commission2">First-level subordinates complete the task and contribute 3% of the task commission to the team leader.</string>
    <string name="str_team_commission3">The second-level subordinates complete the task and contribute 2% of the task commission to the team leader.</string>
    <string name="str_team_commission4">The third-level subordinates complete the task and contribute 1% of the task commission to the team leader.</string>
    <string name="str_team_commission5">Note: VIP0 employees cannot get task commissions.</string>
    <string name="str_team_commission6">Upgrade bonus income:</string>
    <string name="str_team_commission7">First-level subordinate employees purchase VIP work qualifications, and reward the team leader with 8% of the actual purchase amount.</string>
    <string name="str_team_commission8">Second-level  subordinate employees purchase VIP work qualifications, and reward the team leader with 4% of the actual purchase amount.</string>
    <string name="str_team_commission9">Third-level   subordinate employees purchase VIP work qualifications, and reward the team leader with 2% of the actual purchase amount.</string>
    <string name="str_team_commission17">Referral bonus income:</string>
    <string name="str_team_commission11">Get Rs 0.5 referral bonus for every friend you invite to sign up through the invite link. This reward is limited to 20 invites.</string>
    <string name="str_team_commission12">But you can still get all the upgrade rebates and quest rebates for all the users you invite.</string>
    <string name="str_team_commission13">You need to know that the users you invite must meet two conditions:</string>
    <string name="str_team_commission14">1: Register and log in to the Noise Media APP.</string>
    <string name="str_team_commission15">2: Complete the tasks on the app.</string>
    <string name="str_team_commission16">A valid invitation is not recognized until the user completes the task.</string>
    <string name="str_withdrawal_balance">Available balance</string>
    <string name="str_addr_0">Please enter your current USDT Address</string>
    <string name="str_addr_1">Please enter your new USDT Address</string>
    <string name="str_addr_2">Re-enter your new USDT Address</string>
    <string name="str_team_commission10">Note:When your subordinates are upgraded to VIP2 or above, you can get the upgrade reward. There is no reward for upgrading to VIP1.</string>
    <string name="str_extra_ac_4">Withdraw password:</string>
    <string name="str_extra_ac_hint_4">Enter Withdraw password</string>
    <string name="str_withdrawal_sudt_addr1">USDT address(TRC20)</string>
</resources>