<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg_ll_myteam_003"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/yellow_all_bg1"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_commission17"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_level1_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_team_commission11"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_commission12"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_commission13"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_commission14"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_commission15"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_commission16"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>