<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_title_common8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:paddingBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingRight="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/str_withdrawal_balance"
                        android:textColor="@color/color_font_black_21"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="0"
                        android:textColor="@color/color_font_black_a9"
                        android:textSize="14sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_ti3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/str_extra_ac_11"
                    android:textColor="@color/color_font_black_21"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingLeft="18dp">

                    <EditText
                        android:id="@+id/tv_c_money"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/str_extra_ac_413"
                        android:inputType="number"
                        android:textColor="@color/color_font_black_21"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_view_line" />

                <LinearLayout
                    android:id="@+id/rl_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ti2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_centerVertical="true"
                        android:gravity="right"
                        android:text="@string/str_withdrawal_sudt_addr1"
                        android:textColor="@color/color_font_black_21"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingLeft="18dp">

                        <EditText
                            android:id="@+id/et_usdt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/str_withdrawal_sudt_addr1"
                            android:inputType="number"
                            android:maxLength="18"
                            android:textColor="@color/color_font_black_21"
                            android:textSize="14sp" />

                    </RelativeLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/color_view_line" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/str_extra_ac_4"
                        android:gravity="right"
                        android:textColor="@color/color_font_black_21"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingLeft="18dp">

                        <EditText
                            android:id="@+id/et_pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/str_extra_ac_hint_4"
                            android:inputType="numberPassword"
                            android:maxLength="18"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/color_view_line" />

                </LinearLayout>

                <Button
                    android:id="@+id/bt_commit"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_white_bg_add_shadow"
                    android:text="@string/str_look_task_sl"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_extra_ac_5"
                    android:textColor="@color/colorPrimaryGreen"
                    android:textSize="12sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_extra_ac_7_1"
                        android:textColor="@color/colorPrimaryGreen"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_extra_ac_8"
                        android:textColor="@color/colorPrimaryGreen"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_extra_ac_9"
                        android:textColor="@color/colorPrimaryGreen"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>