<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_text_bg_color"
    android:fitsSystemWindows="true"
    android:paddingHorizontal="18dp">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ed_phone"
        android:layout_below="@+id/status_bar_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/et_pass"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:background="@drawable/bg_pic_radius1"
        android:gravity="center_vertical"
        android:hint="@string/str_hime_login_1"
        android:inputType="text"
        android:maxLength="30"
        android:paddingLeft="5dp"
        android:text=""
        android:textColor="#333333"
        android:textCursorDrawable="@drawable/my_cursor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:background="@drawable/bg_pic_radius1"
        android:hint="@string/str_him_login_2"
        android:inputType="phone"
        android:maxLength="7"
        android:paddingLeft="5dp"
        android:textColor="#333333"
        android:textCursorDrawable="@drawable/my_cursor"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/et_pass"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/bg_btn_0026"
        android:text="@string/str_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>